Added code of Angular ToDo sample

--- a/README
+++ b/README
@@ -3,6 +3,8 @@ AngularJS Test
 
 This is a test to try Angular Js using Play framework as the backend.
 
+It's based on the TO DO app shown as tutorial for Angular Js.
+
 
 License (MIT License)
 =====================================
