--- a/README
+++ b/README
@@ -6,6 +6,7 @@ This is a test to try Angular Js using Play framework as the backend. It's based
 It integrates Jasmine via the [Sbt-Jasmine plugin](https://github.com/guardian/sbt-jasmine-plugin) so when you run *play test* it will run both Javascript and Play tests.
 Not that the tests added are too useful (just there to ensure it works).
 
+Angular templates are stored in the public folder, as they are managed by Angular itself. In this scenario Play acts as a simple backend, minimal UI defined via Scala templates. Good or bad, that depends on your taste :)
 
 
 To improve
@@ -14,6 +15,11 @@ To improve
 - Integrate RequireJS to load the AngularJs controllers
 - Run Jasmine scenarios for AngularJs in the test. I have the feeling that due to the usage of Scala templates to render the app, this won't ever work and this test will have to be done via Play selenium tests. Not exactly the same but not so bad either.
 
+
+Resources
+=====================================
+- http://docs.angularjs.org/
+- http://angular-ui.github.com/
 
 
 License (MIT License)
