--- a/README
+++ b/README
@@ -8,13 +8,16 @@ Not that the tests added are too useful (just there to ensure it works).
 
 Angular templates are stored in the public folder, as they are managed by Angular itself. In this scenario Play acts as a simple backend, minimal UI defined via Scala templates. Good or bad, that depends on your taste :)
 
+Known Issues
+=====================================
+I couldn't manage to run the End to End tests via Jasmine, there are several issues that I couldn't solve. I believe the only way will be to use the Play Selenium test for that, using Selenium as described [in this blog](http://paulhammant.com/2012/04/09/testing-knockout-and-angular-with-selenium2/)
+
+
 
 To improve
 =====================================
 - Make the app nice (a bit of css would be good)
 - Integrate RequireJS to load the AngularJs controllers
-- Run Jasmine scenarios for AngularJs in the test. I have the feeling that due to the usage of Scala templates to render the app, this won't ever work and this test will have to be done via Play selenium tests. Not exactly the same but not so bad either.
-
 
 Resources
 =====================================
